Marvel Website API

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 						<button class="btn-facebook"><i class="fa fa-facebook"></i><a href="https://www.facebook.com"> FACEBOOK</a></button>
 						<button class="btn-google"><i class="fa fa-google"></i><a href="https://google.co.ve"> GOOGLE</a></button>
 					</div>
-    				<a href="#" class="a-createacc">CREATE ACCOUNT</a>
+    				<a href="#Register" data-toggle="modal" id="a-event" data-target="#Register" class="a-createacc">CREATE ACCOUNT</a>
                   </form>
                 </div>
               </div>
